--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -68,7 +68,7 @@ CAN-SPAM Compliance Check | Marketing Cloud by default requires you to be compli
 Email Send Log | Allows you to log send-time data about your emails. Requires two features: Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [Send Logging in Email Studio](https://help.salesforce.com/articleView?id=sf.mc_es_send_logging.htm&type=5) | Free
 Auto-Suppression List | Allows you to suppress Contacts from receiving any Emails from the whole instance or specific classification and Business Unit. No need to attach to each send as with standard Suppression Lists. | [Auto-Suppression Lists](https://help.salesforce.com/articleView?id=sf.mc_es_auto_suppresion_lists.htm&type=5) | Free
 Exclusion Scripts | Allows you to define custom exclusion logic evaluated at send time using AMPScript. If possible, use segmentation, suppression and auto-suppression lists due to performance reasons, but in some cases, Exclusion Script might be the only way. There is also a matching feature for Journey Builder Emails. Ask for both. | [Email Studio Exclusion Scripts](https://help.salesforce.com/articleView?id=000339899&type=1&mode=1) | Free
-Custom List Detective | Allows you to block sending and subscribing all contacts with specified Email Address username (for example `admin@`) or domain (for example `@competitor.com`) | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
+Custom List Detective | Allows you to block sending and subscribing all contacts with specified Email Address username (for example `admin@`) or domain (for example `@competitor.com`). Custom rules are applied for all current and future Business Units. | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
 Custom List Detective Allowlist | On top of Custom List Detective you can also ask Support to add specific usernames or domains to Allowlist. Might be useful, as this setting will overwrite the standard List Detective. | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
 Email Attachments | Allows you to send emails with attachments. | [Email Attachments](https://help.salesforce.com/articleView?id=sf.mc_es_email_attachments.htm&type=5) | Paid
 Preserve Reply Attachments | Forwards attachments added to the reply email via RMM's auto-forwarding. | [Reply Mail Management](https://help.salesforce.com/articleView?id=sf.mc_es_reply_mail_management.htm&type=5) | Free
