--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -93,6 +93,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 
 - [Debugging Email Sends](./sql/sfmc-sql-snippet-debugging-email-sends.mdx)
 - [Debugging Value Length](./sql/sfmc-sql-snippet-debugging-value-length.mdx)
+- [Enhanced Send Log](./sql/sfmc-sql-snippet-enhanced-send-log.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/sql/sfmc-sql-basics">Read about SFMC SQL</a>
 
